処理中ダイアログ表示修正

--- a/CS/Src/Common/CommonService/Properties/Resources.resx
+++ b/CS/Src/Common/CommonService/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="CMSMメニューレベル1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\sql\cmsmメニューレベル1.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="CMSMメニューレベル2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\sql\cmsmメニューレベル2.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="CMSM汎用基準値" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\sql\cmsm汎用基準値.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
